added orders fragment

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,4 +5,5 @@
     <color name="intro_3_orange">#A86327</color>
     <color name="white">#919190</color>
     <color name="gray">#EDECEC</color>
+    <color name="light_blue">#7BA8F6</color>
 </resources>
