--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="intro_2_blue">#28A2E4</color>
     <color name="intro_3_orange">#F48F36</color>
     <color name="gray">#686767</color>
+    <color name="light_blue">#C6DCEC</color>
+
 </resources>
