--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -77,6 +77,7 @@
             app:layout_constraintTop_toTopOf="@id/guideline_bottom" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_add_to_cart"
             style="@style/AddToCartButton"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
